--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           dotnet-version: 8.0.x
       - run: |
           cd tshirts
-          bash ../.github/workflows/expectfail.sh dotnet restore --configuration Debug dotnet run --configuration Debug
+          bash ../.github/workflows/expectfail.sh dotnet restore --configuration Debug dotnet test --configuration Debug --no-build
       - run: |
           cd misaligned
           bash ../.github/workflows/expectfail.sh dotnet restore dotnet run
